--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -14,3 +14,12 @@ li {
 
     margin-right: .5rem;
 }
+
+.bg-white {
+    background-color: white;
+}
+
+.wrapper {
+    max-width: 900px;
+    margin: 0 auto;
+}
