--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 .flex {
     display: flex;
@@ -26,4 +32,12 @@ li {
 
 .space-between {
     justify-content: space-between;
+}
+
+.bg-black {
+    background-color: black;
+}
+
+h1 {
+    color: white;
 }
