--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -16,6 +16,8 @@ ul {
 
 }
 
+
+
 li {
 
     margin-right: .5rem;
@@ -39,5 +41,13 @@ li {
 }
 
 h1 {
+    color: white;
+}
+
+footer {
+    background-image: url("../../public/imgs/footer-bg.jpg");
+}
+
+.footer-links {
     color: white;
 }
